<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ProfileActivity">

    <View
        android:id="@+id/vw_background_wall_pink"
        android:layout_width="match_parent"
        android:layout_height="169dp"
        android:background="@color/pink_dark"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/icon_arrow_back"
        android:contentDescription="@string/app_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:layout_marginTop="64dp"
        android:background="@drawable/shape_container_profil_view"
        android:elevation="20dp"
        android:paddingStart="24dp"
        android:paddingTop="29dp"
        android:paddingEnd="24dp"
        android:paddingBottom="10dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:targetApi="lollipop">

        <TextView
            android:id="@+id/tv_profile"
            android:layout_width="133dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/hari_setiaji"
            android:textColor="@color/black"
            android:textSize="39sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_profile"
            android:layout_width="104dp"
            android:layout_height="104dp"
            android:src="@drawable/image_profile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_email"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="18dp"
            android:src="@drawable/icon_gmail"
            android:contentDescription="@string/app_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_profile" />

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/hari_setiaji2000_gmail_com"
            android:textColor="@color/grey_dark"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@id/iv_email"
            app:layout_constraintStart_toEndOf="@+id/iv_email"
            app:layout_constraintTop_toTopOf="@id/iv_email" />

        <ImageView
            android:id="@+id/iv_facebook"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="18dp"
            android:src="@drawable/icon_facebook"
            android:contentDescription="@string/app_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_email" />

        <TextView
            android:id="@+id/tv_facebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/hari_setiaji"
            android:textColor="@color/grey_dark"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@id/iv_facebook"
            app:layout_constraintStart_toEndOf="@+id/iv_facebook"
            app:layout_constraintTop_toTopOf="@id/iv_facebook" />

        <ImageView
            android:id="@+id/iv_instagram"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="20dp"
            android:src="@drawable/icon_instagram"
            android:contentDescription="@string/app_name"
            app:layout_constraintBottom_toBottomOf="@id/tv_facebook"
            app:layout_constraintStart_toEndOf="@id/tv_facebook"
            app:layout_constraintTop_toTopOf="@+id/tv_facebook" />

        <TextView
            android:id="@+id/tv_instagram"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/setianjay"
            android:textColor="@color/grey_dark"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@id/iv_instagram"
            app:layout_constraintStart_toEndOf="@+id/iv_instagram"
            app:layout_constraintTop_toTopOf="@id/iv_instagram" />

        <ImageView
            android:id="@+id/iv_linkedin"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="20dp"
            android:src="@drawable/icon_linkedin"
            android:contentDescription="@string/app_name"
            app:layout_constraintBottom_toBottomOf="@id/tv_instagram"
            app:layout_constraintStart_toEndOf="@id/tv_instagram"
            app:layout_constraintTop_toTopOf="@+id/tv_instagram" />

        <TextView
            android:id="@+id/tv_linkedin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/hari_setiaji"
            android:textColor="@color/grey_dark"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@id/iv_linkedin"
            app:layout_constraintStart_toEndOf="@+id/iv_linkedin"
            app:layout_constraintTop_toTopOf="@id/iv_linkedin" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/container_intro_n_hobby"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="34dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/container_profile">

        <TextView
            android:id="@+id/tv_label_introduction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/introduction"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/my_name_is_hari_setiaji_you_can_call_me_hari_i_live_in_ncitayam_i_live_with_my_parents_n_ni_am_a_college_student_at_polytechnic_lp3i_jakarta_nmy_major_is_computer_informatic_n_nmy_ambition_is_i_want_to_be_a_professional_programmer_nand_i_want_to_be_a_lucky_person_in_life_and_after_life_aamiin"
            android:textColor="@color/grey_dark" />

        <TextView
            android:id="@+id/tv_label_hobby"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="29dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/my_hobby"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <LinearLayout
            android:id="@+id/container_card_hobby"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_gaming"
                style="@style/cardHobby"
                android:layout_marginStart="5dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="23dp"
                android:layout_marginBottom="12dp">

                <ImageView
                    android:id="@+id/iv_gaming"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:src="@drawable/icon_gaming"
                    android:contentDescription="@string/app_name" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/gaming"
                    android:textColor="@color/grey_dark"/>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_learning"
                style="@style/cardHobby"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="23dp"
                android:layout_marginBottom="12dp">

                <ImageView
                    android:id="@+id/iv_learning"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:src="@drawable/icon_learning"
                    android:contentDescription="@string/app_name" />

                <TextView
                    android:id="@+id/tv_learning"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/learning"
                    android:textColor="@color/grey_dark"/>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_saving"
                style="@style/cardHobby"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="12dp"
                android:layout_marginBottom="12dp">

                <ImageView
                    android:id="@+id/iv_saving"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:src="@drawable/icon_saving"
                    android:contentDescription="@string/app_name" />

                <TextView
                    android:id="@+id/tv_saving"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/saving"
                    android:textColor="@color/grey_dark"/>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </LinearLayout>

    <View
        android:id="@+id/vw_support_bottom_rounded"
        android:layout_width="1dp"
        android:layout_height="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/container_intro_n_hobby" />

    <View
        android:id="@+id/vw_bottom_rounded"
        android:layout_width="152dp"
        android:layout_height="137dp"
        android:layout_marginStart="200dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/shape_round_color_secondary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/vw_support_bottom_rounded"
        app:layout_constraintTop_toBottomOf="@id/container_intro_n_hobby" />

</androidx.constraintlayout.widget.ConstraintLayout>