<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".FavoriteActivity">

    <View
        android:id="@+id/vw_header"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:background="@drawable/shape_header_main_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/icon_arrow_back"
        android:contentDescription="@string/app_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/favorite"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/container_content_favorite"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="71dp"
        android:background="@drawable/shape_top_50_white"
        android:orientation="vertical"
        android:padding="45dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/container_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_ar_10_s_white_b_gray"
            android:orientation="horizontal"
            android:padding="10dp">

            <ImageView
                android:id="@+id/iv_search"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/icon_search" />

            <EditText
                android:id="@+id/et_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:inputType="text"
                android:layout_marginStart="10dp"
                android:background="@null"
                android:hint="@string/search_your_favorite_here"
                android:textSize="16sp" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_favorite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="23dp"
            tools:listitem="@layout/item_favorite"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>